[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/ArcadeNormal-ZDZ.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://VolumeSliderContainer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[node name="VolumeSliderContainer" type="HBoxContainer"]
margin_top = 41.0
margin_right = 666.0
margin_bottom = 60.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 162.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Volume"
align = 2

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 166.0
margin_right = 666.0
margin_bottom = 16.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 0
max_value = 1.0
step = 0.0

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
